Changed toList to Collectors.toList